# rules_terraform

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  defs.bzl  deps.bzl  flake.nix
.github/workflows/: ci.yaml
internal/: backend.bzl  backend_config.jsonnet  download.bzl  download_terraform.bzl  modules.bzl  rules.bzl  tests.bzl  variables.bzl
internal/starlark/: BUILD.bazel  main.go  util.bzl
rules_terraform/: defs.bzl  download_terraform.bzl  rules.bzl  terraform.bzl  toolchain.bzl
terraform/: BUILD.bazel  main.tf
terraform/0_12_31/: BUILD.bazel  main.tf
terraform/1_1_2/: BUILD.bazel
terraform/time_module/: BUILD.bazel  main.tf
test/: .gitignore  WORKSPACE
test/0_12_31/: BUILD.bazel  main.tf
test/1_1_2/: BUILD.bazel
test/common/: BUILD.bazel  config.bzl  config.star  generate_backend.bzl
test/hello_ec2/: BUILD.bazel  backend.star  backend.tf.json  main.tf
test/tf_state_bootstrap/: BUILD.bazel  backend.star  locals.star  main.tf
test/time_module/: BUILD.bazel  main.tf
test/vpc/: BUILD.bazel  backend.star  main.tf
