load("//rules_terraform:defs.bzl", "terraform_init", "terraform_run", "terraform_validate_test")

terraform_init(
    name = "init",
    terraform = "@terraform_1_1_2//:terraform",
    srcs = glob(["**/*.tf"]),
)

terraform_run(
    name = "run",
    init = ":init",
)

terraform_validate_test(
    name = "validate",
    init = ":init",
)
