load("//rules_terraform:defs.bzl", "terraform_module", "terraform_root_module", "terraform_validate_test")

terraform_module(
    name = "module",
    srcs = glob(["**/*.tf"]),
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = "@terraform_1_1_2//:terraform",
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)
