load("//rules_terraform:defs.bzl", "terraform_module", "terraform_root_module", "terraform_validate_test")

terraform_module(
    name = "module",
    srcs = glob(["**/*.tf"]),
    providers = [
        "@terraform_provider_local_2_1_0//:provider",
        "@terraform_provider_time_0_7_0//:provider",
    ],
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = "@terraform_0_12_31//:terraform",
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)
