load(
    "//rules_terraform:defs.bzl",
    "terraform_module",
    "terraform_format_test",
)

terraform_module(
    name = "module",
    srcs = glob(["**/*.tf"]),
    providers = [
        "@terraform_provider_time_0_7_0//:provider",
    ],
    visibility = ["//visibility:public"],
)

terraform_format_test(
    name = "format",
    module = ":module",
    terraform = "@terraform_1_1_2//:terraform",
)
