load(
    "@rules_terraform//:defs.bzl",
    "terraform_module",
    "terraform_root_module",
    "terraform_validate_test",
    "terraform_format_test",
)

TERRAFORM = "@terraform_0_12_31//:terraform"

terraform_module(
    name = "module",
    srcs = glob(["**/*.tf"]),
    providers = [
        "@terraform_provider_local_2_1_0//:provider",
    ],
    deps = [
        "//time_module:module",
    ],
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = TERRAFORM,
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)

terraform_format_test(
    name = "format",
    module = ":module",
    terraform = TERRAFORM,
)
