load(
    "@rules_terraform//:defs.bzl",
    "terraform_backend",
    "terraform_format_test",
    "terraform_module",
    "terraform_remote_state",
    "terraform_root_module",
    "terraform_validate_test",
)
load("//common:config.bzl", "create_backend_config")

TERRAFORM = "@terraform_1_1_2//:terraform"

terraform_backend(
    name = "backend",
    backend_type = "s3",
    config = create_backend_config("hello_ec2"),
    visibility = ["//visibility:public"],
)

terraform_remote_state(
    name = "vpc_remote_state",
    backend = "//vpc:backend",
    variable_name = "vpc",
)

terraform_module(
    name = "module",
    srcs = [
        "main.tf",
        ":backend",
        ":vpc_remote_state",
    ],
    providers = [
        "@terraform_provider_aws_3_67_0//:provider",
    ],
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = TERRAFORM,
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)

terraform_format_test(
    name = "format",
    module = ":module",
    terraform = TERRAFORM,
)
