load(
    "@rules_terraform//:defs.bzl",
    "terraform_module",
    "terraform_root_module",
    "terraform_validate_test",
    "terraform_format_test",
    "terraform_backend",
    "terraform_locals",
)

load(
    "//common:config.bzl",
    "state_s3_bucket",
    "state_dynamodb_table",
    "create_backend_config",
)

TERRAFORM = "@terraform_1_1_2//:terraform"

# N.B. When this is first created, we need to comment out the backend block and
# manually store the state in the local filesystem. Once the bucket exists, we
# can store the state in the bucket by uncommenting this block:
#
# 1. Comment out backend
# 2. $ terraform apply
# 3. Uncomment backend
# 4. $ terraform init
# 5. $ terraform apply
terraform_backend(
    name = "backend",
    backend_type = "s3",
    config = create_backend_config("tf_state_bootstrap"),
)

terraform_locals(
    name = "locals",
    variables = {
        "bucket_name": state_s3_bucket,
        "dynamodb_table_name": state_dynamodb_table,
    },
)

terraform_module(
    name = "module",
    srcs = [
        "main.tf",
        ":backend",
        ":locals",
    ],
    providers = [
        "@terraform_provider_aws_3_67_0//:provider",
    ],
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = TERRAFORM,
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)

terraform_format_test(
    name = "format",
    module = ":module",
    terraform = TERRAFORM,
)
