load(
    "@rules_terraform//:defs.bzl",
    "terraform_module",
    "terraform_root_module",
    "terraform_validate_test",
    "terraform_format_test",
)

load("//common:generate_backend.bzl", "generate_s3_backend")
load("//common:config.bzl", "common_config")

TERRAFORM = "@terraform_1_1_2//:terraform"

generate_s3_backend(
    name = "backend",
    bucket = common_config.state_s3_bucket,
    key = "vpc",
    region = common_config.state_s3_region,
    dynamodb_table = common_config.state_dynamodb_table,
)

terraform_module(
    name = "module",
    srcs = [
        "main.tf",
        ":backend",
    ],
    providers = [
        "@terraform_provider_aws_3_67_0//:provider",
    ],
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = TERRAFORM,
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)

terraform_format_test(
    name = "format",
    module = ":module",
    terraform = TERRAFORM,
)
