load(
    "@rules_terraform//:defs.bzl",
    "terraform_module",
    "terraform_root_module",
    "terraform_validate_test",
    "terraform_format_test",
    "terraform_backend",
)

load("//common:config.bzl", "create_backend_config")

TERRAFORM = "@terraform_1_1_2//:terraform"

terraform_backend(
    name = "backend",
    backend_type = "s3",
    config = create_backend_config("vpc"),
    visibility = ["//visibility:public"],
)

terraform_module(
    name = "module",
    srcs = [
        "main.tf",
        ":backend",
    ],
    providers = [
        "@terraform_provider_aws_3_67_0//:provider",
    ],
)

terraform_root_module(
    name = "root_module",
    module = ":module",
    terraform = TERRAFORM,
)

terraform_validate_test(
    name = "validate",
    root_module = ":root_module",
)

terraform_format_test(
    name = "format",
    module = ":module",
    terraform = TERRAFORM,
)
